fixed help text class to be legible

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -90,7 +90,7 @@ button:hover {
 }
 
 .help-text {
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   font-style: italic;
 }
 
